--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -13,15 +13,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        "color-primary": "#F85559"
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
     <style>
         .font-lato {
             font-family: 'Lato', sans-serif;
@@ -30,8 +30,67 @@
 </head>
 
 <body class="font-lato">
-    <header>
+    <header class="lg:max-w-[1440px] lg:mx-auto">
+        <nav class="my-2 lg:my-12 relative">
+            <div class="bg-transparent lg:bg-color-primary lg:rounded-[600px] lg:px-8">
+                <div class="px-4 py-6 mx-auto lg:py-8 sm:max-w-xl md:max-w-full md:px-24 lg:px-4">
+                    <div class="relative flex items-center justify-between lg:justify-between lg:space-x-10">
+                        <ul class="flex items-center hidden space-x-8 font-medium text-white lg:flex">
+                            <li><a>Home</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
+                        </ul>
 
+                        <a href="" title="Company" class="inline-flex items-center">
+                            <img src="images/logo.png" alt="">
+                            <span
+                                class="ml-2 text-xl lg:text-[40px] font-bold tracking-wide text-black lg:text-white">Fruit
+                                Burst</span>
+                        </a>
+                        <div class="relative flex items-center hidden space-x-8 lg:flex lg:justify-start">
+                            <input type="text" placeholder="Search Here"
+                                class="relative input input-bordered rounded-[12rem] md:w-80" />
+
+                            <svg class="absolute right-[15px] top-[15px]" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" viewBox="0 0 24 24" fill="none">
+                                <path
+                                    d="M21 21L15.803 15.803M15.803 15.803C17.2096 14.3965 17.9998 12.4887 17.9998 10.4995C17.9998 8.51035 17.2096 6.60262 15.803 5.19605C14.3964 3.78947 12.4887 2.99927 10.4995 2.99927C8.51029 2.99927 6.60256 3.78947 5.19599 5.19605C3.78941 6.60262 2.99921 8.51035 2.99921 10.4995C2.99921 12.4887 3.78941 14.3965 5.19599 15.803C6.60256 17.2096 8.51029 17.9998 10.4995 17.9998C12.4887 17.9998 14.3964 17.2096 15.803 15.803Z"
+                                    stroke="#121212" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        <!-- Mobile menu -->
+                        <div class="lg:hidden">
+                            <div class="dropdown dropdown-end">
+                                <label tabindex="0" class=" m-1"><svg class="w-5 text-black" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M23,13H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,13,23,13z">
+                                        </path>
+                                        <path fill="currentColor"
+                                            d="M23,6H1C0.4,6,0,5.6,0,5s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,6,23,6z">
+                                        </path>
+                                        <path fill="currentColor"
+                                            d="M23,20H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,20,23,20z">
+                                        </path>
+                                    </svg></label>
+                                <ul tabindex="0"
+                                    class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                                    <li><a>Home</a></li>
+                                    <li><a>About Us</a></li>
+                                    <li><a>Shop</a></li>
+                                    <li><a>All Fruits</a></li>
+                                    <li>
+                                        <input type="text" placeholder="Search Here"
+                                            class="relative input input-bordered w-48 h-9 rounded-[1rem]" />
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
 
