--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
             <div class="mb-10 grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-5">
                 <!-- card 1 -->
                 <div class="card bg-base-100 shadow-xl">
-                    <img src="/images/fruit6.png" alt="" class="rounded-xl w-1/2 mx-auto" />
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                         <p class="mb-3">Apples</p>
@@ -253,7 +255,9 @@
                 </div>
                 <!-- card 2 -->
                 <div class="card bg-base-100 shadow-xl">
-                    <img src="/images/fruit7.png" alt="" class="rounded-xl w-1/2 mx-auto" />
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                         <p class="mb-3">Orange</p>
@@ -292,7 +296,9 @@
                 </div>
                 <!-- card 3 -->
                 <div class="card bg-base-100 shadow-xl">
-                    <img src="/images/fruit8.png" alt="" class="rounded-xl w-1/2 mx-auto" />
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                         <p class="mb-3">Red Dragon</p>
@@ -331,7 +337,9 @@
                 </div>
                 <!-- card 4 -->
                 <div class="card bg-base-100 shadow-xl">
-                    <img src="/images/fruit9.png" alt="" class="rounded-xl w-1/2 mx-auto"/>
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                         <p class="mb-3">Banana</p>
@@ -370,7 +378,7 @@
                 </div>
             </div>
         </div>
-
+        
     </main>
     <footer>
 
