--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
                             <h1 class="mb-5 text-3xl lg:text-7xl font-extrabold text-white">Exotic tastes at your <br>
                                 doorstep</h1>
                             <p class="mb-5 text-sm lg:text-xl text-white">We supply highly quality organic products</p>
-                            <button
-                                class="btn btn-primary bg-color-primary border-none text-xl font-extrabold text-white">Shop
-                                Now</button>
+                            <button class="px-5 py-4 w-40 mx-auto bg-color-primary text-white rounded-xl text-xl font-bold mb-10">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -123,9 +121,7 @@
                             <h1 class="mb-5 text-3xl lg:text-7xl font-extrabold text-white">Exotic tastes at your <br>
                                 doorstep</h1>
                             <p class="mb-5 text-sm lg:text-xl text-white">We supply highly quality organic products</p>
-                            <button
-                                class="btn btn-primary bg-color-primary border-none text-xl font-extrabold text-white">Shop
-                                Now</button>
+                            <button class="px-5 py-4 w-40 mx-auto bg-color-primary text-white rounded-xl text-xl font-bold mb-10">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -142,9 +138,7 @@
                             <h1 class="mb-5 text-3xl lg:text-7xl font-extrabold text-white">Exotic tastes at your <br>
                                 doorstep</h1>
                             <p class="mb-5 text-sm lg:text-xl text-white">We supply highly quality organic products</p>
-                            <button
-                                class="btn btn-primary bg-color-primary border-none text-xl font-extrabold text-white">Shop
-                                Now</button>
+                            <button class="px-5 py-4 w-40 mx-auto bg-color-primary text-white rounded-xl text-xl font-bold mb-10">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -161,9 +155,7 @@
                             <h1 class="mb-5 text-3xl lg:text-7xl font-extrabold text-white">Exotic tastes at your <br>
                                 doorstep</h1>
                             <p class="mb-5 text-sm lg:text-xl text-white">We supply highly quality organic products</p>
-                            <button
-                                class="btn btn-primary bg-color-primary border-none text-xl font-extrabold text-white">Shop
-                                Now</button>
+                            <button class="px-5 py-4 w-40 mx-auto bg-color-primary text-white rounded-xl text-xl font-bold mb-10">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -174,7 +166,7 @@
             </div>
         </div>
         <!-- deal of the day section -->
-        <div>
+        <div class="flex flex-col justify-center">
             <div class="flex flex-col lg:flex-row mb-10 gap-5 text-center lg:text-start">
                 <div class="flex-1 items-center">
                     <h3 class="text-5xl font-extrabold mb-3 text-[#121212]">Deal of the day</h3>
@@ -377,6 +369,7 @@
                     </div>
                 </div>
             </div>
+            <button class="px-5 py-4 w-40 mx-auto bg-[#F85559] text-white rounded-xl text-xl font-bold mb-10">Shop All</button>
         </div>
         
     </main>
