--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="bg-transparent lg:bg-color-primary lg:rounded-[600px] lg:px-8">
                 <div class="px-4 py-6 mx-auto lg:py-8 sm:max-w-xl md:max-w-full md:px-24 lg:px-4">
                     <div class="relative flex items-center justify-between lg:justify-between lg:space-x-10">
-                        <ul class="flex items-center hidden space-x-8 font-medium text-white lg:flex">
+                        <ul class="flex items-center hidden space-x-8 text-xl font-medium text-white lg:flex">
                             <li><a href="">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Shop</a></li>
