--- a/index.html
+++ b/index.html
@@ -732,12 +732,12 @@
                             <div class="flex justify-center lg:justify-start">
                                 <div class="border-b-2 w-24 py-2 border-black"></div>
                             </div>
-                            <p class="pt-3">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="mb-10 lg:mb-0 pt-3">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
                     
                 </div>
-                <div class="flex-1 my-10 lg:my-0">
+                <div class="flex-1 order-first lg:order-none my-10 lg:my-0">
                     <img class="mx-auto h-full" src="images/whychoose1.png" alt="">
                 </div>
                 <div class="flex-1 flex flex-col gap-8">
