modified some elements

--- a/index.html
+++ b/index.html
@@ -208,24 +208,27 @@
                             roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
                     <div class="flex-1 flex text-[#121212] lg:justify-end items-center justify-center">
-                        <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                        <div class="grid grid-flow-col text-center auto-cols-max">
                             <div class="flex flex-col">
                                 <span class="countdown text-5xl">
                                     <span style="--value:15;"></span>
+                                    <img class="h-6 w-6 mt-4" src="images/divider.png" alt="">
                                 </span>
-                                days
+                                <div class="mr-4">days</div>
                             </div>
                             <div class="flex flex-col">
                                 <span class="countdown text-5xl">
                                     <span style="--value:10;"></span>
+                                    <img class="h-6 w-6 mt-4" src="images/divider.png" alt="">
                                 </span>
-                                hours
+                                <div class="me-4">hours</div>
                             </div>
                             <div class="flex flex-col">
                                 <span class="countdown text-5xl">
                                     <span style="--value:24;"></span>
+                                    <img class="h-6 w-6 mt-4" src="images/divider.png" alt="">
                                 </span>
-                                min
+                                <div class="mr-4">min</div>
                             </div>
                             <div class="flex flex-col">
                                 <span class="countdown text-5xl">
