added extra features

--- a/index.html
+++ b/index.html
@@ -250,16 +250,16 @@
                             <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                             <p class="mb-3">Apples</p>
                             <div class="rating mb-3">
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             </div>
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="bg-transparent border-none text-[#F85559]"
                                 onclick="my_modal_1.showModal()">Details</button>
-                            <dialog id="my_modal_1" class="modal">
+                            <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
                                     <img class="mx-auto pb-3" src="images/fruit6.png" alt="">
                                     <h3 class="font-extrabold text-4xl">Apples</h3>
@@ -291,16 +291,16 @@
                             <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                             <p class="mb-3">Orange</p>
                             <div class="rating mb-3">
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             </div>
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="bg-transparent border-none text-[#F85559]"
                                 onclick="my_modal_2.showModal()">Details</button>
-                            <dialog id="my_modal_2" class="modal">
+                            <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
                                     <img class="mx-auto pb-3" src="images/fruit7.png" alt="">
                                     <h3 class="font-extrabold text-4xl">Orange</h3>
@@ -332,16 +332,16 @@
                             <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                             <p class="mb-3">Red Dragon</p>
                             <div class="rating mb-3">
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             </div>
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="bg-transparent border-none text-[#F85559]"
                                 onclick="my_modal_3.showModal()">Details</button>
-                            <dialog id="my_modal_3" class="modal">
+                            <dialog id="my_modal_3" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
                                     <img class="mx-auto pb-3" src="images/fruit8.png" alt="">
                                     <h3 class="font-extrabold text-4xl">Red Dragon</h3>
@@ -373,16 +373,16 @@
                             <h2 class="card-title px-10 border-b-2 pb-3">12.90$ - 18.85$</h2>
                             <p class="mb-3">Banana</p>
                             <div class="rating mb-3">
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="checkbox" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             </div>
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="bg-transparent border-none text-[#F85559]"
                                 onclick="my_modal_4.showModal()">Details</button>
-                            <dialog id="my_modal_4" class="modal">
+                            <dialog id="my_modal_4" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
                                     <img class="mx-auto pb-3" src="images/fruit9.png" alt="">
                                     <h3 class="font-extrabold text-4xl">Banana</h3>
